Changing Specification to typeorm
