# src/modules/cars/entities/Specification.ts
@@ -1,9 +1,20 @@
+import {
+  Entity, PrimaryColumn, Column, CreateDateColumn,
+} from 'typeorm';
 import { v4 as uuidV4 } from 'uuid';
 
+@Entity('specifications')
 class Specification {
+  @PrimaryColumn()
   id?: string;
+
+  @Column()
   name: string;
+
+  @Column()
   description: string;
+
+  @CreateDateColumn()
   created_at: Date;
 
   constructor() {
